HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeRecordFieldApply/Expected.uv
//! Expected diagnostic metadata for the FfiSafeRecordFieldApply rejected-source specimen.

expectedDiagnostic("E-TYP-2626", "rule.23.FfiSafe-Record-Field-Apply-Err")
